updated build and checkstyle